# cython-examples

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyximport-test.py  setup-fib.py  setup-hello.py  setup-primes.py  setup-shapes.py  setup.cfg
primes/: __init__.py  primes_c1.pyx  primes_c2.pyx  primes_python.py
shapes/: .gitignore  Rectangle.cpp  rect.pyx
tests/: primes_test.py  shapes_test.py
