[build]
#compiler= msvc #used only for windows hosts
compiler = mingw32


[build_ext]
#ignore build-lib and put compiled extensions into the source directory alongside your pure Python modules
inplace=1 
#compiler= msvc #this will force remote install to use windows compiler. DONT!


[sdist]
formats=gztar


[metadata]
description_file = README.md

[tool:pytest]
addopts = --pylint 