[metadata]
name             = cython-examples
provides         = cython
description      = cython examples package
url              = https://github.com/papazerveas/cython-examples
download_url     = https://github.com/papazerveas/cython-examples
author           = Sotiris Papazerveas
author_email     = papazerveas@hotmail.com
maintainer       = Sotiris Papazerveas
maintainer_email = papazerveas@hotmail.com
keywords         = python, cython, cpp
license          = GPL-3 LGPL-3
platforms        = Linux, Darwin, Windows
version          = attr: src.__version__
project_urls     =
    Docs = https://github.com/papazerveas/cython-examples/README.md
    Bugs = https://github.com/papazerveas/cython-examples/issues

license_files = LICENSE
long_description = file: README.md
description_file = README.md
long_description_content_type = text/markdown
classifiers = 
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: Other Audience
    Natural Language :: English
    License :: OSI Approved :: GNU General Public License (GPL)
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development

[options]
zip_safe = True
include_package_data = True
python_requires  = >=3.7
tests_require    = isort ; prospector ; pre-commit ; pre-commit-hooks
install_requires = pip
setup_requires   = pip ; cython; setuptools
packages         = find:


[bdist_wheel]
universal = 1
# python-tag = py36

[install_lib]
compile = 1
optimize = 2

[bdist_egg]
exclude-source-files = true

[build]
# used only for windows hosts
# compiler = msvc 
# used for mingw32 gcc for nt platform
compiler = mingw32  
# compiler = gcc 


[build_ext]
#ignore build-lib and put compiled extensions into the source directory alongside your pure Python modules
inplace = 1 
# compiler= msvc #this will force remote install to use windows compiler. DONT!


[sdist]
formats = gztar


[tool:pytest]
addopts = --pylint 